[package]
name = "polaris"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
actix-web = "4.0.0-rc.1"
actix-web-httpauth = "0.6.0-beta.7"
anyhow = "1.0"
async-trait = "0.1"
aws-config = "0.6"
aws-sdk-ecr = "0.6"
aws-smithy-types-convert = { version = "0.36", features = ["convert-chrono"] }
aws-types = "0.6"
base64 = "0.13"
bollard = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.9"
dirs = "4.0"
duration-string = "0.0"
either = "1.6"
futures-core = "0.3"
itertools = "0.10"
nanoid = "0.4"
once_cell = "1.9"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "postgres", "macros", "chrono", "json", "offline"] }
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-actix-web = "0.5.0-rc.1"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[features]
